--- a/yingfeng/H1N1-yf.ipynb
+++ b/yingfeng/H1N1-yf.ipynb
@@ -2,101 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Cumulative no. of cases</th>\n",
-       "      <th>Cumulative no. of deaths</th>\n",
-       "      <th>Link</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2009-04-24</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.who.int/csr/don/2009_04_24/en/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2009-04-24</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.who.int/csr/don/2009_04_24/en/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2009-04-26</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.who.int/csr/don/2009_04_24/en/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2009-04-26</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.who.int/csr/don/2009_04_24/en/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2009-04-27</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.who.int/csr/don/2009_04_24/en/</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Date                   Country  Cumulative no. of cases  \\\n",
-       "0  2009-04-24                    Mexico                       18   \n",
-       "1  2009-04-24  United States of America                        7   \n",
-       "2  2009-04-26                    Mexico                       18   \n",
-       "3  2009-04-26  United States of America                       20   \n",
-       "4  2009-04-27                    Canada                        6   \n",
-       "\n",
-       "   Cumulative no. of deaths                                        Link  \n",
-       "0                         0  https://www.who.int/csr/don/2009_04_24/en/  \n",
-       "1                         0  https://www.who.int/csr/don/2009_04_24/en/  \n",
-       "2                         0  https://www.who.int/csr/don/2009_04_24/en/  \n",
-       "3                         0  https://www.who.int/csr/don/2009_04_24/en/  \n",
-       "4                         0  https://www.who.int/csr/don/2009_04_24/en/  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'config'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-b88386820d61>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mboxcox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgkey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# Configure gmaps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'config'"
+     ]
     }
    ],
    "source": [
@@ -106,6 +24,15 @@
     "import scipy.stats as stats\n",
     "from scipy.stats import linregress, pearsonr\n",
     "\n",
+    "import requests\n",
+    "import gmaps\n",
+    "from pprint import pprint\n",
+    "from scipy.stats import boxcox\n",
+    "\n",
+    "from config import gkey\n",
+    "\n",
+    "# Configure gmaps\n",
+    "gmaps.configure(api_key=gkey)\n",
     "\n",
     "data = pd.read_csv(\"../Resources/H1N1_dataset.csv\")\n",
     "data.head()\n"
